--- a/app/src/main/res/layout/dialog_setting_font_color.xml
+++ b/app/src/main/res/layout/dialog_setting_font_color.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/fontColorText"
+        android:id="@+id/tv_settingfontcolor_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <top.defaults.colorpicker.ColorPickerView
-        android:id="@+id/colorPicker"
+        android:id="@+id/colorpicker_settingfontcolor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:enableAlpha="true"
@@ -27,27 +27,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fontColorText" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_settingfontcolor_title" />
 
     <LinearLayout
-        android:id="@+id/fontColorLinearLayout"
+        android:id="@+id/linearlayout_settingfontcolor_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/colorPicker">
+        app:layout_constraintTop_toBottomOf="@+id/colorpicker_settingfontcolor">
 
         <View
-            android:id="@+id/fontPickedColor"
+            android:id="@+id/view_settingfontcolor_preview"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp" />
 
         <TextView
-            android:id="@+id/fontColorHex"
+            android:id="@+id/tv_settingfontcolor_color_to_hex"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginBottom="12dp"
@@ -57,7 +57,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/fontColorCancel"
+        android:id="@+id/btn_settingfontcolor_cancel"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,11 +65,11 @@
         android:background="@color/white"
         android:text="취소"
         android:textColor="#299FFF"
-        app:layout_constraintEnd_toStartOf="@+id/fontColorSave"
-        app:layout_constraintTop_toBottomOf="@+id/fontColorLinearLayout" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_settingfontcolor_save"
+        app:layout_constraintTop_toBottomOf="@+id/linearlayout_settingfontcolor_container" />
 
     <Button
-        android:id="@+id/fontColorSave"
+        android:id="@+id/btn_settingfontcolor_save"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,6 +77,6 @@
         android:text="저장"
         android:textColor="#299FFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fontColorLinearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearlayout_settingfontcolor_container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
