--- a/app/src/main/res/layout/dialog_setting_ime_kr.xml
+++ b/app/src/main/res/layout/dialog_setting_ime_kr.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/dialog_InputMethodKR_tv"
+        android:id="@+id/tv_settingimekr_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -19,46 +19,46 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
-        android:id="@+id/dialog_InputMethodKRSelect_rg"
+        android:id="@+id/radiogroup_settingimekr_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/dialog_InputMethodKRSelect_ok"
+        app:layout_constraintBottom_toTopOf="@+id/btn_settingimekr_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_InputMethodKR_tv">
+        app:layout_constraintTop_toBottomOf="@+id/tv_settingimekr_title">
 
         <RadioButton
-            android:id="@+id/dialog_InputMethodKRSelect_QWERTY"
+            android:id="@+id/radiobtn_settingimekr_qwerty"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="쿼티(기본)"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/dialog_InputMethodKRSelect_CHUN"
+            android:id="@+id/radiobtn_settingimekr_chun"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="천지인"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/dialog_InputMethodKRSelect_NA"
+            android:id="@+id/radiobtn_settingimekr_narat"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="나랏글"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/dialog_InputMethodKRSelect_CHUNA"
+            android:id="@+id/radiobtn_settingimekr_chun_ambi"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="천지인 양손"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/dialog_InputMethodKRSelect_DANMOUM"
+            android:id="@+id/radiobtn_settingimekr_danmo"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="단모음"
@@ -66,15 +66,15 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/dialog_InputMethodKRSelect_ok"
+        android:id="@+id/btn_settingimekr_save"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|center"
         android:layout_margin="3dp"
         android:background="@color/white"
-        android:text="확인"
+        android:text="저장"
         android:textColor="#299FFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_InputMethodKRSelect_rg" />
+        app:layout_constraintTop_toBottomOf="@+id/radiogroup_settingimekr_container" />
 </androidx.constraintlayout.widget.ConstraintLayout>
