--- a/app/src/main/res/layout/dialog_setting_longclick.xml
+++ b/app/src/main/res/layout/dialog_setting_longclick.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/dialog_EnterkeyAddonSelect_tv"
+        android:id="@+id/tv_settinglongclick_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -20,40 +19,47 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
-        android:id="@+id/dialog_EnterkeyAddonSelect_rg"
+        android:id="@+id/radiogroup_settinglongclick_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/dialog_EnterkeyAddonSelect_ok"
+        app:layout_constraintBottom_toTopOf="@+id/btn_settinglongclick_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_EnterkeyAddonSelect_tv">
+        app:layout_constraintTop_toBottomOf="@+id/tv_settinglongclick_title">
 
         <RadioButton
-            android:id="@+id/dialog_EnterkeyAddonSelect_none"
+            android:id="@+id/radiobtn_settinglongclick_none"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="없음"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/dialog_EnterkeyAddonSelect_autotext"
+            android:id="@+id/radiobtn_settinglongclick_boilerplate"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="상용구"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/dialog_EnterkeyAddonSelect_cursor"
+            android:id="@+id/radiobtn_settinglongclick_cursor_keypad"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:text="커서이동 및 편집"
+            android:text="커서키패드"
+            android:textSize="18sp" />
+
+        <RadioButton
+            android:id="@+id/radiobtn_settinglongclick_number_keypad"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:text="숫자키패드"
             android:textSize="18sp" />
     </RadioGroup>
 
     <Button
-        android:id="@+id/dialog_EnterkeyAddonSelect_ok"
+        android:id="@+id/btn_settinglongclick_save"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,5 +69,5 @@
         android:text="확인"
         android:textColor="#299FFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_EnterkeyAddonSelect_rg" />
+        app:layout_constraintTop_toBottomOf="@+id/radiogroup_settinglongclick_container" />
 </androidx.constraintlayout.widget.ConstraintLayout>
