--- a/app/src/main/res/layout/fragment_emoji.xml
+++ b/app/src/main/res/layout/fragment_emoji.xml
@@ -29,7 +29,7 @@
                 app:emojiButton_theme="@{kbviewmodel.kbTheme}">
 
                 <ImageButton
-                    android:id="@+id/emoji_keyboard_button"
+                    android:id="@+id/imgbtn_emoji_back"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.15"
@@ -40,21 +40,21 @@
                     app:colorFilter="@{kbviewmodel.kbFunctionKeysFontColor}" />
 
                 <HorizontalScrollView
-                    android:id="@+id/emoji_scrollview"
+                    android:id="@+id/scrollview_emoji_container"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.7"
                     android:scrollbarSize="1dp">
 
                     <com.sb.fittingKeyboard.service.emoji.indicator.CustomIndicator
-                        android:id="@+id/emoji_viewpager_indicator"
+                        android:id="@+id/indicator_emoji_list"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal" />
                 </HorizontalScrollView>
 
                 <ImageButton
-                    android:id="@+id/emoji_delete_button"
+                    android:id="@+id/imgbtn_emoji_delete"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.15"
@@ -66,7 +66,7 @@
             </LinearLayout>
 
             <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/emoji_viewpager"
+                android:id="@+id/viewpager_emoji"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
