--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,53 +8,53 @@
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_main_setting_activity"
+        android:id="@+id/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="#007BFF"
         android:minHeight="50dp"
         android:theme="@style/appBar"
-        app:layout_constraintBottom_toTopOf="@id/tablayout_main_setting_activity"
+        app:layout_constraintBottom_toTopOf="@id/tablayout_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tablayout_main_setting_activity"
+        android:id="@+id/tablayout_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/view_main_setting_activity_divider"
+        app:layout_constraintBottom_toTopOf="@id/view_main_divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_main_setting_activity"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
         app:tabIndicatorColor="#007BFF"
         app:tabSelectedTextColor="#007BFF"
         app:tabTextColor="@color/black" />
 
     <View
-        android:id="@+id/view_main_setting_activity_divider"
+        android:id="@+id/view_main_divider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@color/lightgrey"
         android:layout_marginHorizontal="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tablayout_main_setting_activity"
+        app:layout_constraintTop_toBottomOf="@id/tablayout_main"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewpager2_main_setting_activity"
+        android:id="@+id/viewpager2_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingHorizontal="8dp"
         android:paddingVertical="4dp"
-        app:layout_constraintBottom_toTopOf="@id/edittext_main_setting_activity_test"
+        app:layout_constraintBottom_toTopOf="@id/edittext_main_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_main_setting_activity_divider" />
+        app:layout_constraintTop_toBottomOf="@id/view_main_divider" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/edittext_main_setting_activity_test"
+        android:id="@+id/edittext_main_test"
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:layout_marginHorizontal="25dp"
@@ -70,6 +70,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/viewpager2_main_setting_activity" />
+        app:layout_constraintTop_toBottomOf="@id/viewpager2_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
